--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ discord = "^1.0.1"
 youtube-dl = "^2020.12.26"
 ffmpeg = "^1.4"
 PyNaCl = "^1.4.0"
-spotipy = "^2.16.1"
+flask = "^1.1.2"
 
 [tool.poetry.dev-dependencies]
 
