--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ youtube-dl = "^2020.12.26"
 ffmpeg = "^1.4"
 PyNaCl = "^1.4.0"
 flask = "^1.1.2"
+werkzeug = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 
