--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Created by https://www.toptal.com/developers/gitignore/api/images
 # Edit at https://www.toptal.com/developers/gitignore?templates=images
-
+crypto.py
+temp.py
+music.py
+*.cpython-38.pyc
+poetry.lock
+pyproject.toml
+.gitignore
 ### Images ###
 # JPEG
 *.jpg
